applications/microservices-demo/overlays/prod/front-end-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-external
  namespace: microservices-demo
  labels:
    app: front-end
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30090
    protocol: TCP
    name: http
  selector:
    app: front-end
