applications/microservices-demo/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: microservices-demo
  annotations:
    haproxy.org/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
    - host: microservices.192.168.101.191.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
