applications/microservices-demo/overlays/prod/port-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-port-ingress
  namespace: microservices-demo
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
    - host: sock-shop.192.168.101.191.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
